Fix some spacing issues --WIP

--- a/src/main.css
+++ b/src/main.css
@@ -60,17 +60,15 @@ main#UI {
   display: grid;
 }
 .menu__item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 10px;
   border: 1px solid black;
   background-color: white;
   border-radius: var(--br-md);
   transition: all 200ms;
   cursor: pointer;
 }
-
+.user__profile {
+  background-color: aquamarine;
+}
 /* Closed side Menus */
 .menu__item[toggled="false"].menu__item.fold-slide {
   width: 400px;
@@ -79,17 +77,16 @@ main#UI {
   .user__profile {
     display: flex;
     flex-direction: column;
+    position: relative;
     align-items: center;
+    padding-block: 2rem;
     gap: 10px;
-    > * {
-      transition: all 200ms;
-    }
     .pfp {
       height: 100px;
       width: 100px;
     }
     .edit-button {
-      position: absolute;
+      position: absolute ;
       top: 10px;
       right: 10px;
     }
@@ -128,7 +125,10 @@ main#UI {
   }
   .user__profile {
     display: flex;
+    align-items: center;
     gap: 10px;
+    height: 100%;
+    padding-inline: 1rem;
   }
   button {
     display: none;
